# starlink-sattrack-addon

./: .gitignore  CHANGELOG.md  LICENSE.txt  pyproject.toml
src/starlink/: __init__.py  models_old.py  passes.py
src/starlink/config/: __init__.py  configImport.py  starlink-config.toml
src/starlink/importers/: tleimporter.py
src/starlink/models/: satellites.py  starlink.py
