[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "starlink"
version = "0.1.0"
authors = [
    { name="Quinton Barnes", email="devqbizzle68@gmail.com" }
]
description = "Sattrack addon for handling and SpaceX's Starlink satellite batches."
readme = "README.md"
license = { file = "LICENCE.txt" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "sattrack",
    "pyevspace",
    "requests",
]

[project.urls]
"Homepage" = "https://github.com/qbizzle68/starlink-sattrack-addon"
"Bug Tracker" = "https://github.com/qbizzle68/starlink-sattrack-addon/issues"
